--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ function calcula(valor){
     filtre_renda = renda.filter(element => element.nommuni == valor);
     filtre_gini = gini.filter(element => element.nommuni == valor);
     filtre_immigra = immigra.filter(element => element["categoria %"] == valor);
+    filtre_ist = ist.filter(element => element.municipi == valor);
     myChart1.destroy();
     pintar1();
     myChart2.destroy();
@@ -78,6 +79,8 @@ function calcula(valor){
     pintar15();
     myChart16.destroy();
     pintar16();
+    myChart17.destroy();
+    pintar17();
 }
 
 function canvi(ambit){
@@ -411,6 +414,7 @@ function omple(div){
 <script src="grafic14.js"></script>
 <script src="grafic15.js"></script>
 <script src="grafic16.js"></script>
+<script src="grafic17.js"></script>
 
 </body>
 </html>
@@ -442,6 +446,7 @@ $(document).ready(function () {
         grafic14();
         grafic15();
         grafic16();
+        grafic17();
     });
 });
 </script>
