--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ function calcula(valor){
     filtre_immigra = immigra.filter(element => element["categoria %"] == valor);
     filtre_ist = ist.filter(element => element.municipi == valor);
     filtre_hab = hab.filter(element => element.nommuni == valor);
+    filtre_estudis = estudis.filter(element => element.nommuni == valor);
     myChart1.destroy();
     pintar1();
     myChart2.destroy();
@@ -84,6 +85,8 @@ function calcula(valor){
     pintar17();
     myChart18.destroy();
     pintar18();
+    myChart19.destroy();
+    pintar19();
 }
 
 function canvi(ambit){
@@ -419,6 +422,7 @@ function omple(div){
 <script src="grafic16.js"></script>
 <script src="grafic17.js"></script>
 <script src="grafic18.js"></script>
+<script src="grafic19.js"></script>
 
 </body>
 </html>
@@ -452,6 +456,7 @@ $(document).ready(function () {
         grafic16();
         grafic17();
         grafic18();
+        grafic19();
     });
 });
 </script>
