--- a/index.html
+++ b/index.html
@@ -354,52 +354,52 @@ function omple(div){
                     font='Diputació de Barcelona ';
                     break;
         case "11":  titol="Població ";
-                    texte= "Població i densitat de població per municipi ";
+                    texte= "Població.habitants i densitat de població per km2 ";
                     temporalitat='2000-2020 ';
                     font='IDESCAT ';
                     break;  
         case "12":  titol="Nivell de renda  ";
-                    texte= "Renda per càpita segons el seu origen ";
-                    temporalitat='2015-2018 ';
-                    font='INE ';
+                    texte= "Renda familiar disponible bruta territorial per habitant";
+                    temporalitat='2010-2019 ';
+                    font='IDESCAT i INE ';
                     break;         
         case "13":  titol="Productivitat ";
-                    texte= "Producte Interior Brut territorial  ";
-                    temporalitat='2011-2018 ';
+                    texte= "PIB territorial per capita per municipi";
+                    temporalitat='2011-2019 ';
                     font='IDESCAT ';
                     break;
         case "14":  titol="Atur";
-                    texte= "Taxa d’atur registrat relativitzat pel nombre d’habitants del municipi ";
-                    temporalitat='2015-2020 ';
+                    texte= "Nombre de persones aturades als municipis";
+                    temporalitat='2005-2021 ';
                     font='SEPE';
                     break;
         case "15":  titol="Desigualtat";
                     texte= "Índex de desigualtat de Gini ";
-                    temporalitat='2015-2018 ';
+                    temporalitat='2015-2019 ';
                     font='INE';
                     break;
         case "16":  titol="Immigració";
-                    texte= "Població estrangera provinent de països en desenvolupament ";
+                    texte= "% de poblacio extrangera respecte al total del municipi ";
                     temporalitat='2000-2020 ';
                     font='IDESCAT ';
                     break;
         case "17":  titol="Nivell socioeconòmic ";
                     texte= "Índex Socioeconòmic Territorial respecte al total de Catalunya ";
-                    temporalitat='2015-2018 ';
+                    temporalitat='2015-2019 ';
                     font='IDESCAT ';
                     break;
         case "18":  titol="Habitatge ";
-                    texte= "Registre de demanda d'habitatge social protegit per mil habitants ";
-                    temporalitat='2017-2020 ';
-                    font='Cens de Població i Habitatges ';
+                    texte= "Demanda habitatge. Persones inscrites en el Registre de Sol·licitants d'habitatges amb protecció oficial ";
+                    temporalitat='2012-2020 ';
+                    font="Secretaria d'Habitatge i Inclusió Social ";
                     break;
         case "19":  titol="Formació";
-                    texte= "Percentatge de població amb estudis primaris o sense cap estudi ";
-                    temporalitat='2015-2018 ';
-                    font='Cens de Població i Habitatges ';
+                    texte= "Població amb estudis baixos. Percentatge de població de 20 o més anys que és analfabeta o té com a molt estudis de primària. Correspon als nivells 0 i 1 de la classificació CCED-2020 (A) ";
+                    temporalitat='2015-2019 ';
+                    font='IDESCAT ';
                     break;
         case "20":  titol="Innovació ";
-                    texte= "Registre de patents europees per mil habitants ";
+                    texte= "Patents totals registrades per municipi ";
                     temporalitat='2005-2015 ';
                     font='PATSTAT';
                     break;         
