--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ function calcula(valor){
     filtre_ppt = ppt.filter(element => element.nommuni == valor);
     filtre_estat_12 = estat_rius.filter(element => element.nommuni == valor);
     filtre_estat_18 = estat_rius.filter(element => element.nommuni_1 == valor);
-    filtre_cob56 = cob56.filter(element => element.nommuni == valor);
-    filtre_cob93 = cob93.filter(element => element.nommuni == valor);
+    filtre_cob56 = cob56.filter(element => element.field_1 == valor);
+    filtre_cob93 = cob93.filter(element => element.field_1 == valor);
     filtre_cob00 = cob00.filter(element => element.field_1 == valor);
     filtre_cob05 = cob05.filter(element => element.field_1 == valor);
     filtre_cob09 = cob09.filter(element => element.field_1 == valor);
