--- a/index.html
+++ b/index.html
@@ -303,50 +303,50 @@ Chart.defaults.set('plugins.title', {
 function omple(div){
     switch (div){
         case "1":  titol='Variabilitat climàtica ';
-                    texte= "Anomalia de la temperatura mitjana i de la precipitació anual respecte un període de referència fixat per l'IPCC (1961-1990)";
-                    temporalitat='2008-2021';
-                    font='SMC';
+                    texte= "% de variació de la precipitació respecte a la mitjana, ºC de variació respecte a la temperatura mitjana.";
+                    temporalitat='2017-2021';
+                    font='Servei Meteorològic de Catalunya.';
                     break;
         case "2":  titol='Cobertes del sòl';
-                    texte= "Evolució de les cobertes del sòl ";
-                    temporalitat='1987-2017';
+                    texte= "Cobertes del sòl (% de superfície)";
+                    temporalitat='1956, 1993, 2000, 2005, 2009, 2015';
                     font='CREAF';
                     break;
         case "3":  titol='Incendis forestals';
-                    texte= "Superfície cremada (1ha)";
-                    temporalitat='1986-2020';
+                    texte= "Totals de superfície cremada en ha.";
+                    temporalitat='1986-2021';
                     font='GENCAT';
                     break;
         case "4":  titol='Funcionalitat del paisatge ';
                     texte= "Índex de connectivitat ecològica dels espais oberts ";
-                    temporalitat='2015, 2009, 1993, 1956 ';
-                    font='LET';
+                    temporalitat='1956, 1993, 2009, 2015 ';
+                    font='IERMB';
                     break;
         case "5":  titol="Qualitat de l’aigua ";
                     texte= "Estat ecològic dels rius, indicador que combina la qualitat biològica, fisicoquímica i hidromorfològica  ";
                     temporalitat='2007-2012, 2013-2018  ';
-                    font='ACA ';
+                    font="Agencia Catalana de l'Aigua (ACA)";
                     break;
         case "6":  titol="Consum d'energia ";
-                    texte= "Electricitat i gas natural consumit per sectors i habitant  ";
-                    temporalitat='2012-2019 ';
-                    font='ICAEN';
+                    texte= "Consum d'energia elèctrica i de gas natural en l'àmbit domèstic. Dades en kwh.";
+                    temporalitat='2013-2020 ';
+                    font='IDESCAT';
                     break;
         case "7":  titol="Consum d'aigua ";
-                    texte= "Consum d'aigua domèstica per càpita ";
-                    temporalitat='2011-2015 ';
-                    font='AMB';
+                    texte= "Consum domèstic d'aigua per habitant. Dades en m3 per any.";
+                    temporalitat='2013-2020 ';
+                    font='IDESCAT';
                     break;
         case "8":  titol="Generació de residus ";
-                    texte= "Generació de residus domèstics per habitant ";
-                    temporalitat='2010-2016 ';
+                    texte= "Generació de residus domèstics per habitant. Dades en kg per capita per any. ";
+                    temporalitat='2015-2020 ';
                     font='IDESCAT';
                     break;
         
         case "9":  titol="Contaminació atmosfèrica ";
                     texte= "Concentració de contaminants pels punts de la Xarxa de Vigilància i Previsió de la Contaminació Atmosfèrica ";
-                    temporalitat='22012-2016 ';
-                    font='Generalitat de Catalunya   ';
+                    temporalitat='2015-2021';
+                    font='Departament de Medi Ambient i Sostenibilitat.';
                     break;
         case "10":  titol="Gasos d’efecte hivernacle ";
                     texte= "Emissions CO2 equivalents per càpita associat al tipus d’energia i el seu ús ";
