actualització gràfic inmigració

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function calcula(valor){
     filtre_prod = prod.filter(element => element.municipi== valor);
     filtre_renda = renda.filter(element => element.nommuni == valor);
     filtre_gini = gini.filter(element => element.nommuni == valor);
-    filtre_immigra = immigra.filter(element => element["categoria %"] == valor);
+    filtre_immigra = immigra.filter(element => element["municipi %"] == valor);
     filtre_ist = ist.filter(element => element.municipi == valor);
     filtre_hab = hab.filter(element => element.nommuni == valor);
     filtre_estudis = estudis.filter(element => element.nommuni == valor);
