--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ function omple(div){
                     font='Diputació de Barcelona ';
                     break;
         case "11":  titol="Població ";
-                    texte= "Població.habitants i densitat de població per km2 ";
+                    texte= "Població.Habitants i densitat de població per km2 ";
                     temporalitat='2000-2020 ';
                     font='IDESCAT ';
                     break;  
